[package]
name = "sledtest"
version = "0.1.0"
authors = ["drdr xp <drdr.xp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.42"
sled = { version = "0.34.6", features = ["event_log", "pretty_backtrace"]}
tempfile = "3.2.0"
tokio = { version = "1.8.2", features = ["macros", "rt","rt-multi-thread", "sync"] }
